--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,35 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <footer class="footer">
+  <div class="container">
+    <span class="text-muted">made by <a href="https://builtbynlb.com/" target="_blank">nlb</a></span>
+  </div>
+</footer>
   </body>
   <style media="screen">
-    body {
-      background-color: #fff;
+  html {
+    position: relative;
+    min-height: 100%;
+  }
+  a{
+  color:darkgrey;
+  }
+  a:hover{
+    color:lightgrey;
+    text-decoration:none;
+  }
+  body {
+    margin-bottom: 60px; /* Margin bottom by footer height */
+    background-color: #fff;
     }
+  .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+}
   </style>
 </html>
