--- a/public/index.html
+++ b/public/index.html
@@ -8,21 +8,25 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
+
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+
+    <div id="app">
+    </div>
     <!-- built files will be auto injected -->
     <footer class="footer">
-  <div class="container">
-    <span class="text-muted">made by <a href="https://builtbynlb.com/" target="_blank">nlb</a></span>
-  </div>
-</footer>
+      <div class="container">
+        <span class="text-muted">made by <a href="https://builtbynlb.com/" target="_blank">nlb</a></span>
+      </div>
+  </footer>
   </body>
   <style media="screen">
   html {
     position: relative;
     min-height: 100%;
+    overflow-x:hidden;
   }
   a{
   color:darkgrey;
@@ -37,7 +41,7 @@
     }
   .footer {
     position: absolute;
-    bottom: 0;
+    bottom: -2%;
     width: 100%;
     height: 60px; /* Set the fixed height of the footer here */
     line-height: 60px; /* Vertically center the text there */
