--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,34 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>nCov Dashboard | by nlb</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q3LGWW9WH8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-Q3LGWW9WH8');
+  </script>
+  <link rel="canonical" href="https://ncov.builtbynlb.com/" />
+
+  <meta name="description" content="Statistics about COVID-19. Updated daily.">
+  <meta name="robots" content="index,follow">
+  <meta name="googlebot" content="index,follow">
+  <meta name="application-name" content="nCov Dashboard">
+  <meta name="mobile-web-app-capable" content="no">
+  <meta name="apple-mobile-web-app-title" content="nCov Dashboard">
+  <meta name="apple-mobile-web-app-capable" content="no">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta property="og:url" content="ncov.builybynlb.com">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="nCov Dashboard | by nlb">
+  <meta property="og:description" content="Statistics about COVID-19. Updated daily.">
+  <meta itemprop="name" content="nCov Dashboard | by nlb">
+  <meta itemprop="description" content="Statistics about Covid-19. Updated daily">
+  <meta name="google" content="notranslate">
+  <meta name="pinterest" content="nohover">
+
   </head>
   <body>
 
