--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>virus.png">
+    <link rel="stylesheet" href="/css/lighttheme.css">
     <title>nCov Dashboard | by nlb</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q3LGWW9WH8"></script>
@@ -15,8 +16,8 @@
 
       gtag('config', 'G-Q3LGWW9WH8');
   </script>
+  <script src="https://kit.fontawesome.com/540209ae9e.js" crossorigin="anonymous"></script>
   <link rel="canonical" href="https://ncov.builtbynlb.com/" />
-
   <meta name="description" content="Statistics about COVID-19. Updated daily.">
   <meta name="robots" content="index,follow">
   <meta name="googlebot" content="index,follow">
@@ -44,11 +45,6 @@
     <div id="app">
     </div>
     <!-- built files will be auto injected -->
-    <footer class="footer">
-      <div class="container">
-        <span class="text-muted">made by <a href="https://builtbynlb.com/" target="_blank">nlb</a></span>
-      </div>
-  </footer>
   </body>
   <style media="screen">
   html {
@@ -73,7 +69,11 @@
     width: 100%;
     height: 60px; /* Set the fixed height of the footer here */
     line-height: 60px; /* Vertically center the text there */
-    background-color: #f5f5f5;
+}
+select {
+    text-align: center;
+    text-align-last: center;
+    -moz-text-align-last: center;
 }
   </style>
 </html>
