--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>virus.png">
-    <link rel="stylesheet" href="/css/lighttheme.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>/css/lighttheme.css">
     <title>nCov Dashboard | by nlb</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q3LGWW9WH8"></script>
