Removed font awesome and upgraded dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>virus.png">
     <link rel="stylesheet" href="<%= BASE_URL %>/css/lighttheme.css">
-    <title>nCov Dashboard | by nlb</title>
+    <title>nCov Dashboard | nlb</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q3LGWW9WH8"></script>
     <script>
@@ -16,7 +16,6 @@
 
       gtag('config', 'G-Q3LGWW9WH8');
   </script>
-  <script src="https://kit.fontawesome.com/540209ae9e.js" crossorigin="anonymous"></script>
   <link rel="canonical" href="https://ncov.builtbynlb.com/" />
   <meta name="description" content="Statistics about COVID-19. Updated daily.">
   <meta name="robots" content="index,follow">
@@ -31,7 +30,7 @@
   <meta property="og:title" content="nCov Dashboard | by nlb">
   <meta property="og:description" content="Statistics about COVID-19. Updated daily.">
   <meta itemprop="name" content="nCov Dashboard | by nlb">
-  <meta itemprop="description" content="Statistics about Covid-19. Updated daily">
+  <meta itemprop="description" content="Statistics about COVID-19. Updated daily">
   <meta name="google" content="notranslate">
   <meta name="pinterest" content="nohover">
 
